# Kali_legion_fork

./: .gitignore  DESIGN_PRINCIPLES.md  HYDRA_COMPARISON.md  LICENSE  MIGRATION_PLAN.md  NIKTO_COMPARISON.md  PHASE1_REVIEW.md  PHASE2_SUMMARY.md  QUICKSTART.md  README.md  SETUP_GUIDE.md  STATUS.md  legion.py  requirements.txt  simple_ui_test.py  start_ui.py  test_debug_scan.py  test_empty_scan.py  test_mainwindow.py  test_scan_dialog.py  test_server.py
_old/: ARCHITECTURE.md  README.md  STATUS.md.old  TEST_RESULTS.md  pyproject.toml
docs/: ARCHITECTURE_DETAILS.md  CLEANUP_REPORT.md  CLEAR_DATA_FEATURE.md  CREDENTIAL_OPTIONS_TEST.md  DESIGN_PRINCIPLES.md  HYDRA_INTEGRATION.md  HYDRA_UI_IMPROVEMENTS.md  HYDRA_WORDLIST_INTEGRATION.md  Hydra_2025.md  LEGACY_VS_NEW_ANALYSIS.md  LOCAL_TEST_ENVIRONMENT.md  NMAP_ENHANCEMENT_PLAN.md  NSE_SCRIPTS.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PHASE5_TASK2_SUMMARY.md  PHASE5_TASK7_SUMMARY.md  PHASE6_TASK1_SUMMARY.md  PHASE6_TASK2_SUMMARY.md  PHASE6_TASK3_NSE_SUMMARY.md  QUICK_START.md  QUICK_TEST.md  README.md  SIMPLE_WORDLIST_GUIDE.md  TASK6_COMPLETION.md  TESTING_GUIDE.md  TOOL_ANALYSIS.md  WORDLIST_PROCESSOR.md
docs/archive/: README.md  REPOSITORY_CLEANUP.md  SCANNER_INTEGRATION_FIX.md  SETTINGS_DIALOG.md
scan_logs/: 649da98f-eed8-49ad-b485-7a906869c5b4.json  README.md
scan_results/: 3faaff4f-0966-4268-9ed2-3bba03c1fead.xml  b3039d8c-c6fb-4e5d-93e3-dcb474899035.xml
scripts/: .gitkeep  README.md
scripts/legacy/: README.md
scripts/wordlists/: ssh-betterdefaultpasslist.txt  ssh-password.txt
src/: README.md
src/legion/: __init__.py  __main__.py
src/legion/config/: __init__.py  config_test.py  defaults.py  init.py  manager.py  schema.py  template.toml
src/legion/core/: __init__.py  database.py  integration_test.py  scanner.py
src/legion/core/models/: __init__.py  credential.py  host.py  port.py  service.py
src/legion/platform/: __init__.py  detector.py  paths.py  privileges.py
src/legion/tools/: __init__.py  base.py  discovery.py  registry.py
src/legion/tools/hydra/: __init__.py  parser.py  tool.py
src/legion/tools/nikto/: __init__.py  tool.py
src/legion/tools/nmap/: __init__.py  parser.py  wrapper.py
src/legion/tools/searchsploit/: __init__.py  tool.py
src/legion/ui/: README.md  __init__.py  app.py  async_helper.py  brute_widget.py  dialogs.py  hydra_history_widget.py  hydra_services_widget.py  mainwindow.py  models.py  results_widget.py  settings.py
src/legion/utils/: wordlist_processor.py  wordlist_strategy.py  wordlists.py
tests/: test_features.py  test_hydra_parser.py  test_hydra_tool.py
tests/ui/: README.md  test_empty_scan.py  test_mainwindow.py  test_nmap_scan.py  test_qasync_fix.py  test_settings_dialog.py
