[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "legion-pentesting"
version = "2.0.0-alpha1"
description = "Cross-platform semi-automated network penetration testing framework"
readme = "README.md"
requires-python = ">=3.10"  # Minimum, Python 3.12+ empfohlen
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "GoVanguard", email = "info@govanguard.com"},
    {name = "Gotham Security", email = "support@gotham-security.com"}
]
maintainers = [
    {name = "Gotarr"}
]
keywords = ["security", "pentesting", "nmap", "scanner", "reconnaissance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Topic :: Security",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Environment :: X11 Applications :: Qt",
]

dependencies = [
    # GUI Framework (schlank konfiguriert)
    "PyQt6>=6.6.0",
    
    # Database (async)
    "SQLAlchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    
    # Async Operations
    "aiofiles>=23.0.0",
    "qasync>=0.24.0",  # Qt async integration
    
    # Configuration & Validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    
    # OS-specific utilities
    "platformdirs>=4.0.0",  # Cross-platform directories
    "psutil>=5.9.0",        # Process management
    
    # Minimal additional dependencies
    "requests>=2.31.0",     # HTTP requests
]

[project.optional-dependencies]
# Tool Fallbacks (wenn native Tools nicht installiert)
fallbacks = [
    "python-nmap>=0.7.1",   # Nmap wrapper fallback
]

# Development dependencies
dev = [
    # Testing
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-qt>=4.2.0",
    
    # Code Quality (neueste Versionen)
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "isort>=5.12.0",
    
    # Type stubs
    "types-requests>=2.31.0",
]

# Integration with external services (optional)
integrations = [
    "pyExploitDb>=0.2.0",
    "pyShodan>=1.0.0",
    "GitPython>=3.1.0",
]

# All extras
all = [
    "legion-pentesting[fallbacks,dev,integrations]",
]

[project.urls]
Homepage = "https://github.com/Gotarr/Kali_legion_fork"
Documentation = "https://github.com/Gotarr/Kali_legion_fork/wiki"
Repository = "https://github.com/Gotarr/Kali_legion_fork"
Issues = "https://github.com/Gotarr/Kali_legion_fork/issues"
Changelog = "https://github.com/Gotarr/Kali_legion_fork/blob/master/CHANGELOG.txt"

[project.scripts]
legion = "legion.__main__:main"
legion-cli = "legion.cli:main"

[tool.setuptools]
packages = ["legion"]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
legion = [
    "ui/resources/*.qss",
    "ui/resources/*.svg",
    "ui/resources/*.png",
    "config/*.toml",
    "wordlists/*.txt",
]

# Black configuration
[tool.black]
line-length = 120
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | legacy
)/
'''

# Ruff configuration
[tool.ruff]
line-length = 120
target-version = "py310"
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "legacy",
    ".venv",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports in __init__.py

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_calls = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true
exclude = [
    "legacy/",
    "build/",
    "dist/",
]

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--cov=src/legion",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "requires_nmap: tests that require nmap to be installed",
    "requires_tools: tests that require external tools",
    "windows: tests that only run on Windows",
    "linux: tests that only run on Linux",
    "macos: tests that only run on macOS",
]
asyncio_mode = "auto"

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "legacy/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Isort configuration
[tool.isort]
profile = "black"
line_length = 120
skip_gitignore = true
extend_skip = ["legacy"]
known_first_party = ["legion"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
